Updated configurations and added a few useful functions.

--- a/link/.tmux.conf
+++ b/link/.tmux.conf
@@ -1,4 +1,4 @@
-source "$POWERLINE_PREFIX/bindings/tmux/powerline.conf"
+# source "$POWERLINE_PREFIX/bindings/tmux/powerline.conf"
 
 # PREFIX
 set -g prefix2 C-a                                      # GNU-Screen compatible prefix
