--- a/link/.ssh/config
+++ b/link/.ssh/config
@@ -11,4 +11,4 @@ IgnoreUnknown UseKeychain
 Host *
   UseKeychain yes
   AddKeysToAgent yes
-  IdentityFile ~/.ssh/id_rsa
+  IdentityFile ~/.ssh/id_ed25519
