--- a/copy/.gitconfig
+++ b/copy/.gitconfig
@@ -97,6 +97,11 @@
   svnr = svn rebase
   svnd = svn dcommit
   svnl = svn log --oneline --show-commit
+
+  hack = town hack
+  npr = town new-pull-request
+  ts = town sync
+  tc = town continue
 [format]
   pretty = format:%C(blue)%ad%Creset %C(yellow)%h%C(green)%d%Creset %C(blue)%s %C(magenta) [%an]%Creset
 [mergetool]
