--- a/.chezmoiexternal.toml
+++ b/.chezmoiexternal.toml
@@ -3,4 +3,4 @@
     url = "https://github.com/sorin-ionescu/prezto.git"
     refreshPeriod = "168h"
     [".zprezto".clone]
-        args = "--recursive"
+        args = ["--recursive"]
